Ghostery Dawn Intro Hub Miscellaneous Fixes (#653)
* Fix the StepProgressBar width for each screen, step4 needs to be a little bigger

* Add back button to all pages

* Add margin top to Step Progress Bar

* Add back button for success view

* Refactor back button for all pages

* Log the user out if they are returning to step 1

* Add logout behavior to navbar

* Add highestSetupStepReached() method to next buttons

* Trying to add setup_step to SetupLifeCycleReducer

* Revert "Trying to add setup_step to SetupLifeCycleReducer"

This reverts commit fd2fb31b591ceca1e727d391170cf1fd2bc1baf4.

* Revert "Add highestSetupStepReached() method to next buttons"

This reverts commit b7cdd1e975ad127ec1886ecef39dba269c525392.

* Prevent user from moving forwards in the StepProgress bar, only back

* Add back console log

* Remove test class

* Fix tooltips

* Get rid of margin-left on all screens. Fix success view strings. Center CTA button on BlockSettings

* Fix back button on small screen sizes for SuccessView

* Bold <StepProgressBar /> current step label

* Fix ChoosePlanView price font sizes

Co-authored-by: Ilya Zarembsky <ilya.zarembsky@gmail.com>

--- a/app/ghostery-browser-hub/Views/OnboardingViews/Step3_ChooseDefaultSearchView/ChooseDefaultSearchView.scss
+++ b/app/ghostery-browser-hub/Views/OnboardingViews/Step3_ChooseDefaultSearchView/ChooseDefaultSearchView.scss
@@ -9,6 +9,39 @@
   margin: 45px auto 83px auto;
 }
 
+.ChooseSearchView__relativeContainer {
+	position: relative;
+	@include breakpoint(small down) {
+		margin-left: 0;
+	}
+}
+.ChooseSearchView__caret.left {
+	margin: 7px auto 0 auto;
+	height: 10px;
+  width: 10px;
+  border-left: 2px solid $tundora;
+	border-top: 2px solid $tundora;
+	cursor: pointer;
+	transform: rotate(-45deg);
+}
+
+.ChooseSearchView__backContainer {
+	position: absolute;
+	display: flex;
+	width: 68px;
+	margin-top: 61px;
+	@include breakpoint(small down) {
+		margin-top: 20px;
+	}
+	.ChooseSearchView__back {
+		margin-top: 8px;
+		font-size: 16px;
+		color: $tundora;
+		text-decoration: underline;
+	}
+}
+
+
 .ChooseSearchView__title {
   font-size: 24px;
   font-weight: 500;
