--- a/app/ghostery-browser-hub/Views/OnboardingViews/Step3_ChooseDefaultSearchView/ChooseDefaultSearchView.scss
+++ b/app/ghostery-browser-hub/Views/OnboardingViews/Step3_ChooseDefaultSearchView/ChooseDefaultSearchView.scss
@@ -89,6 +89,7 @@
   justify-content: center;
   height: 44px;
   width: 162px;
+  cursor: pointer;
   padding: 7.7px 14px;
   line-height: 22px;
   background: linear-gradient(
