Tidy up custom URL input a little more

--- a/app/ghostery-browser-hub/Views/OnboardingViews/Step3_ChooseDefaultSearchView/ChooseDefaultSearchView.scss
+++ b/app/ghostery-browser-hub/Views/OnboardingViews/Step3_ChooseDefaultSearchView/ChooseDefaultSearchView.scss
@@ -109,6 +109,8 @@
   box-shadow: none;
   border-radius: 0px;
   border-bottom: 1px solid $dark-silver;
+  width: 70%;
+  margin-bottom: 0;
 
   &:focus {
 	border: none;
