--- a/app/ghostery-browser-hub/Views/OnboardingViews/Step1_CreateAccountView/Step1_CreateAccountView.scss
+++ b/app/ghostery-browser-hub/Views/OnboardingViews/Step1_CreateAccountView/Step1_CreateAccountView.scss
@@ -35,7 +35,7 @@ $color-create-account-form-error-red: #e74055;
 
 	.Step1_CreateAccountView__ctaButton {
 		margin: 48px auto 0 auto;
-		height: 44px;
+		min-height: 44px;
 		width: 162px;
 		padding: 7.7px 14px;
 		line-height: 22px;
