--- a/app/ghostery-browser-hub/Views/OnboardingViews/Step1_LogInForm/Step1_LogInForm.scss
+++ b/app/ghostery-browser-hub/Views/OnboardingViews/Step1_LogInForm/Step1_LogInForm.scss
@@ -76,7 +76,7 @@
 
 	.Step1_LogInForm__ctaButton {
 		margin: 48px auto 0 auto;
-		height: 44px;
+		min-height: 44px;
 		width: 162px;
 		padding: 7.7px 14px;
 		line-height: 22px;
