--- a/app/ghostery-browser-hub/Views/OnboardingViews/Step4_ChoosePlanView/ChoosePlanView.scss
+++ b/app/ghostery-browser-hub/Views/OnboardingViews/Step4_ChoosePlanView/ChoosePlanView.scss
@@ -33,10 +33,7 @@ $medium-large-breakpoint: 1118px; // Break when 3 cards on the screen overflow t
 	position: absolute;
 	display: flex;
 	width: 68px;
-	margin-top: 52px;
-	@include breakpoint(small down) {
-		position: relative;
-	}
+	margin-top: 10px;
 	.ChoosePlanView__back {
 		margin-top: 8px;
 		font-size: 16px;
@@ -175,6 +172,7 @@ $medium-large-breakpoint: 1118px; // Break when 3 cards on the screen overflow t
 		flex-direction: column;
 		justify-content: center;
 		margin: 0 15px;
+		min-height: 670px;
 	}
 }
 .ChoosePlanView__orCardContainer {
@@ -212,7 +210,7 @@ $medium-large-breakpoint: 1118px; // Break when 3 cards on the screen overflow t
 	}
 }
 .ChoosePlanView__card {
-	height: 670px;
+	height: 100%;
 	box-shadow: 0 0 7px 0 rgba(0, 0, 0, 0.5);
 	margin-bottom: rem-calc(40);
 	width: 250px;
@@ -329,15 +327,12 @@ $medium-large-breakpoint: 1118px; // Break when 3 cards on the screen overflow t
 .ChoosePlanView__valuePropList {
 	margin: auto;
 	width: 174px;
-
-	&.basic {
-		width: 145px;
-	}
 }
 .ChoosePlanView__cardSubCopy {
 	display: flex;
 	justify-content: flex-start;
 	margin-bottom: 5px;
+	text-align: left;
 }
 .check {
 	display: inline-block;
@@ -345,6 +340,7 @@ $medium-large-breakpoint: 1118px; // Break when 3 cards on the screen overflow t
 	height: 20px;
 	background-repeat: no-repeat;
 	margin-top: 3px;
+	padding-right: 20px;
 	&.blue {
 		background-image: buildCheckIcon($price-blue);
 	}
