--- a/app/ghostery-browser-hub/Views/OnboardingView/OnboardingView.scss
+++ b/app/ghostery-browser-hub/Views/OnboardingView/OnboardingView.scss
@@ -3,6 +3,12 @@
 	margin: 0 auto;
 	padding: 0 20px;
 
+	&.step2 {
+		max-width: 714px;
+	}
+	&.step3 {
+		max-width: 728px;
+	}
 	&.step4 {
 		max-width: 910px;
 	}
