--- a/app/ghostery-browser-hub/Views/OnboardingViews/Step3_ChooseDefaultSearchView/ChooseDefaultSearchView.scss
+++ b/app/ghostery-browser-hub/Views/OnboardingViews/Step3_ChooseDefaultSearchView/ChooseDefaultSearchView.scss
@@ -30,7 +30,7 @@
 	display: flex;
 	width: 68px;
 	margin-top: 61px;
-	@include breakpoint(small down) {
+	@include breakpoint(xlarge down) {
 		margin-top: 20px;
 	}
 	.ChooseSearchView__back {
@@ -47,6 +47,10 @@
   font-weight: 500;
   line-height: 2.33;
   text-align: center;
+	@include breakpoint(xxlarge down) {
+		max-width: 400px;
+		margin: auto;
+	}
 }
 
 .ChooseSearchView__subtitle {
