Align BlockSettingsView checkbox per vinny, add click handler to checkbox label

--- a/app/ghostery-browser-hub/Views/OnboardingViews/Step2_BlockSettingsView/BlockSettingsView.scss
+++ b/app/ghostery-browser-hub/Views/OnboardingViews/Step2_BlockSettingsView/BlockSettingsView.scss
@@ -128,7 +128,11 @@
 	width: 20px;
 	height: 20px;
 	padding: 0;
-	margin-right: 14px;
+	margin-left: -14px;
+}
+
+.BlockSettingsView_checkboxLabel {
+	cursor: pointer;
 }
 
 .BlockSettingsView__infoIcon {
