Fix terms and agreements label position on Create Account Form

--- a/app/ghostery-browser-hub/Views/OnboardingViews/Step1_CreateAccountForm/Step1_CreateAccountForm.scss
+++ b/app/ghostery-browser-hub/Views/OnboardingViews/Step1_CreateAccountForm/Step1_CreateAccountForm.scss
@@ -53,8 +53,9 @@
 }
 .Step1_CreateAccountForm__legalConsentCheckedLabel {
 	font-size: 14px;
+	margin-top: 13px;
 	@include breakpoint(small down) {
-		width: 258px;
+		width: 290px;
 	}
 
 	&.error {
