Clean uphub templates and on install hub branching code

--- a/app/templates/hub.html
+++ b/app/templates/hub.html
@@ -17,30 +17,10 @@
 <meta content="utf-8" http-equiv="encoding">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link href="../../dist/css/foundation_hub.css" media="screen" rel="stylesheet" type="text/css">
+<link href="../../dist/css/hub.css" media="screen" rel="stylesheet" type="text/css">
 </head>
 <body>
 	<div id="root"></div>
-	<script>
-		const body = document.getElementsByTagName('body')[0];
-		const js = document.createElement("script");
-
-		js.type = "text/javascript";
-		// TODO branch on actual user agent value
-		if (false) js.src = '../../dist/hub_react.js';
-		else js.src = '../../dist/hub_ghostery_browser_react.js';
-
-		body.appendChild(js);
-
-		const head = document.getElementsByTagName('head')[0];
-		const hubCSS = document.createElement("link");
-
-		hubCSS.type = "text/css";
-		hubCSS.rel = "stylesheet";
-		hubCSS.media = "screen";
-		// TODO branch on actual user agent value
-		hubCSS.href="../../dist/css/hub_ghostery_browser.css";
-
-		head.appendChild(hubCSS);
-	</script>
+	<script src="../../dist/hub_react.js"></script>
 </body>
 </html>
