Fix errors, add max-width to beautify string

--- a/app/ghostery-browser-hub/Views/OnboardingViews/Step0_WelcomeView/WelcomeView.scss
+++ b/app/ghostery-browser-hub/Views/OnboardingViews/Step0_WelcomeView/WelcomeView.scss
@@ -28,7 +28,7 @@
 
 .WelcomeView__subtitle {
 	margin-bottom: 20px;
-	width: 392px;
+	max-width: 495px;
 	font-size: 18px;
 	line-height: 2.33;
 	text-align: center;
