Make radio button labels clickable in Block Settings view. Factor answer block rendering out to a render helper

--- a/app/ghostery-browser-hub/Views/OnboardingViews/Step2_BlockSettingsView/BlockSettingsView.scss
+++ b/app/ghostery-browser-hub/Views/OnboardingViews/Step2_BlockSettingsView/BlockSettingsView.scss
@@ -116,6 +116,7 @@
 .BlockSettingsView_answerBlock {
 	display: flex;
 	align-items: center;
+  	cursor: pointer;
 }
 
 .BlockSettingsView_checkboxBlock {
