Make ghostery glow icon bigger in select default search modal

--- a/app/dawn-hub/Views/OnboardingViews/Step3_ChooseDefaultSearchView/ChooseDefaultSearchView.scss
+++ b/app/dawn-hub/Views/OnboardingViews/Step3_ChooseDefaultSearchView/ChooseDefaultSearchView.scss
@@ -288,7 +288,11 @@
 }
 
 .ChooseSearchView__modalOptionLogo {
-  padding: 70px 0;
+	padding: 70px 0;
+
+	&.ghostery {
+		width: 266px;
+	}
 }
 
 .ChooseSearchView__modalDescription {
