Update logo sizes on choose default search view

--- a/app/dawn-hub/Views/OnboardingViews/Step3_ChooseDefaultSearchView/ChooseDefaultSearchView.scss
+++ b/app/dawn-hub/Views/OnboardingViews/Step3_ChooseDefaultSearchView/ChooseDefaultSearchView.scss
@@ -114,6 +114,12 @@
 	&.ghostery {
 		margin-left: -14px;
 	}
+	&.startpage {
+		margin-left: -9px;
+	}
+	&.yahoo {
+		margin-left: -9px;
+	}
 }
 
 .ChooseSearchView__optionDescriptionHeader {
