--- a/extension-manifest-v2/app/dawn-hub/Views/OnboardingViews/Step5_SuccessView/SuccessView.scss
+++ b/extension-manifest-v2/app/dawn-hub/Views/OnboardingViews/Step5_SuccessView/SuccessView.scss
@@ -37,7 +37,7 @@
 	display: flex;
 	width: 68px;
 	margin-top: 142px;
-	@include breakpoint(medium down) {
+	@include breakpoint(large down) {
 		margin-top: 100px;
 	}
 	.SuccessView__back {
