--- a/app/dawn-hub/Views/OnboardingViews/Step2_BlockSettingsView/BlockSettingsView.scss
+++ b/app/dawn-hub/Views/OnboardingViews/Step2_BlockSettingsView/BlockSettingsView.scss
@@ -52,13 +52,14 @@
 }
 
 .BlockSettingsView__title {
+  	margin-top: 30px;
 	font-size: 24px;
 	font-weight: 500;
-	line-height: 2.33;
+	line-height: 1.3;
 	text-align: center;
 	@include breakpoint(xxlarge down) {
-		max-width: 580px;
-		margin: auto;
+		max-width: 450px;
+		margin: 30px auto auto auto;
 	}
 }
 
