--- a/extension-manifest-v2/app/dawn-hub/Views/OnboardingViews/Step0_WelcomeView/WelcomeView.scss
+++ b/extension-manifest-v2/app/dawn-hub/Views/OnboardingViews/Step0_WelcomeView/WelcomeView.scss
@@ -45,7 +45,7 @@
 	justify-content: center;
 	margin: 0 auto;
 	min-height: 44px;
-	width: 162px;
+	min-width: 162px;
 	padding: 7.7px 14px;
 	line-height: 22px;
 	background: linear-gradient(
